# monochromize

./: .gitignore  .pre-commit-config.yaml  README.md  mise.toml  pyproject.toml
monochromize/: __init__.py  __main__.py
monochromize/process/: __init__.py  processor.py
